🧪 test: add FileServiceS3ImplTest